# style-search

./: .gitignore  CLAUDE.md  README.md  TRAINING.md  flake.nix  process-compose.yaml  pyproject.toml
nix/modules/: style-search.nix
style_search/: api.py  config.py  db.py  embed_images.py  model_info.py  scrape_doomp.py  similarity.py  train_similarity.py  training.py
style_search/cli/: __init__.py  admin.py  embed.py  model_info.py  scrape.py  sync.py  train.py
web/: bun.nix  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
web/public/: site.webmanifest
web/src/: App.tsx  Scatterplot.tsx  api.ts  index.css  main.tsx  routeTree.gen.ts
web/src/components/: artist-hover-preview.tsx  detail-sidebar.tsx  header.tsx  scatterplot.tsx  search-sidebar.tsx  theme-provider.tsx  theme-switcher.tsx  user-provider.tsx
web/src/components/ui/: button.tsx  card.tsx  hover-card.tsx  input.tsx  scroll-area.tsx  select.tsx  switch.tsx
web/src/routes/: $dataset.tsx  index.tsx
web/src/routes/$dataset/: $artistId.tsx
web/src/routes/train.$dataset/: index.tsx  view.tsx
