[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "style-search"
version = "0.1.0"
description = "Scrape doomp images and explore style-space with embeddings"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "chromadb>=1.0",
    "click>=8.1",
    "fastapi>=0.115",
    "llvmlite>=0.43",
    "numba>=0.60",
    "numpy>=1.22,<2.4",
    "open-clip-torch>=2.29",
    "pillow>=10.0",
    "requests>=2.31",
    "safetensors>=0.4",
    "scikit-learn>=1.5",
    "rich>=13.0",
    "torch>=2.5",
    "torchvision>=0.20",
    "umap-learn>=0.5",
    "uvicorn>=0.30",
    "plotext>=5.3",
    "textual>=0.50",
]

[project.scripts]
scrape-doomp = "style_search.scrape_doomp:main"
embed-images = "style_search.embed_images:main"
style-api = "style_search.api:main"
model-info = "style_search.model_info:main"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[dependency-groups]
dev = [
    "ruff>=0.9",
    "basedpyright>=1.27",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["style_search"]
venvPath = "."
venv = ".venv"
